pktfmt/src/old/tests/error_fmts/field_invalid_repr2.pktfmt
// error: repr should be u8
Field {
    bit = 5, 
    repr = &[u8],
}